# db_agent

./: .gitignore  README.md  models.txt  pyproject.toml  server.py  setup_db.py
dbagent/: __init__.py  agent.py  config.py
dbagent/llm/: __init__.py  provider.py
dbagent/memory/: __init__.py  conversation.py
dbagent/tools/: __init__.py  db_tool.py  schema_tool.py
dbagent/utils/: __init__.py  formatter.py
examples/: basic_usage.py
static/: index.html  script.js  style.css
